Add socket.io to package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "socket.io-client": "^1.2.1",
     "moment": "^2.9.0",
     "sillyname": "0.0.3",
-    "express": "^4.11.0"
+    "express": "^4.11.0",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "browserify": "^8.1.0",
