--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "gulp-react": "^2.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1",
-    "reactify": "^0.17.1"
+    "reactify": "^0.17.1",
+    "install": "^0.1.8",
+    "npm": "^2.2.0",
+    "gulp-sass": "^1.3.2",
+    "gulp-compass": "^2.0.3"
   }
 }
