--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "postinstall": "gulp"
+    "postinstall": "gulp build"
   },
   "author": "Chris Kipers",
   "license": "ISC",
