--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-compass": "^2.0.3",
     "gulp-jshint": "^1.9.0",
     "jshint-stylish": "^1.0.0",
-    "event-stream": "^3.2.1"
+    "event-stream": "^3.2.1",
+    "gulp-livereload": "~3.4.0"
   }
 }
