--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.9.0",
     "sillyname": "0.0.3",
     "express": "^4.11.0",
-    "socket.io": "^1.2.1"
+    "socket.io": "^1.2.1",
+    "jade": "~1.9.1"
   },
   "devDependencies": {
     "browserify": "^8.1.0",
