--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "gulp-jshint": "^1.9.0",
     "jshint-stylish": "^1.0.0",
     "event-stream": "^3.2.1",
-    "gulp-livereload": "~3.4.0"
+    "gulp-livereload": "~3.4.0",
+    "gulp-uglifyjs": "~0.5.0",
+    "gulp-uglifycss": "~1.0.4",
+    "gulp-clean": "~0.3.1"
   }
 }
