--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-livereload": "~3.4.0",
     "gulp-uglifyjs": "~0.5.0",
     "gulp-uglifycss": "~1.0.4",
-    "gulp-clean": "~0.3.1"
+    "gulp-clean": "~0.3.1",
+    "gulp-sass": "~1.3.2"
   }
 }
