Place create room input in the room section of the left view panel

--- a/config/jshint-config.json
+++ b/config/jshint-config.json
@@ -4,5 +4,6 @@
   "predef": ["require", "module", "console"],
   "quotmark": "single",
   "camelcase": true,
-  "curly": true
+  "curly": true,
+  "node": true
 }
