--- a/package.json
+++ b/package.json
@@ -39,6 +39,14 @@
     "gulp-uglifyjs": "~0.5.0",
     "gulp-uglifycss": "~1.0.4",
     "gulp-clean": "~0.3.1",
-    "gulp-sass": "~1.3.2"
+    "gulp-sass": "~1.3.2",
+    "karma-browserify": "^2.0.0",
+    "karma": "^0.12.31",
+    "jasmine": "^2.1.1",
+    "jasmine-core": "^2.1.3",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-es5-shim": "0.0.4",
+    "jquery": "^2.1.3"
   }
 }
