--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-es5-shim": "0.0.4",
-    "jquery": "^2.1.3"
+    "jquery": "^2.1.3",
+    "karma-chrome-launcher": "^0.1.7"
   }
 }
