--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "A Chat App to server as a demo for React and Flux.",
   "main": "app.js",
   "scripts": {
+    "test": "gulp test",
     "start": "node app",
     "postinstall": "gulp build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ChrisKipers/React-Flux-Chat.git"
   },
   "author": "Chris Kipers",
   "license": "ISC",
@@ -49,5 +54,6 @@
     "karma-es5-shim": "0.0.4",
     "jquery": "^2.1.3",
     "karma-chrome-launcher": "^0.1.7"
-  }
+  },
+  "license": "MIT"
 }
