--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-flux-chat",
   "version": "0.0.1",
   "description": "A Chat App to server as a demo for React and Flux.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "gulp test",
     "start": "node app",
@@ -13,7 +13,7 @@
     "url": "https://github.com/ChrisKipers/React-Flux-Chat.git"
   },
   "author": "Chris Kipers",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "flux": "^2.0.1",
     "lodash": "^2.4.1",
@@ -24,7 +24,11 @@
     "sillyname": "0.0.3",
     "express": "^4.11.0",
     "socket.io": "^1.2.1",
-    "jade": "~1.9.1"
+    "jade": "~1.9.1",
+    "guid": "0.0.12",
+    "express-session": "^1.10.1",
+    "cookie-parser": "^1.3.3",
+    "q": "^1.1.2"
   },
   "devDependencies": {
     "browserify": "^8.1.0",
@@ -54,6 +58,5 @@
     "karma-es5-shim": "0.0.4",
     "jquery": "^2.1.3",
     "karma-chrome-launcher": "^0.1.7"
-  },
-  "license": "MIT"
+  }
 }
