--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "gulp test",
-    "start": "node app",
+    "start": "node server",
     "postinstall": "gulp build"
   },
   "repository": {
@@ -49,7 +49,7 @@
     "gulp-uglifycss": "~1.0.4",
     "gulp-clean": "~0.3.1",
     "gulp-sass": "~1.3.2",
-    "karma-browserify": "^2.0.0",
+    "karma-browserify": "^3.0.0",
     "karma": "^0.12.31",
     "jasmine": "^2.1.1",
     "jasmine-core": "^2.1.3",
