Switch persistence to mongodb

--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
   "author": "Chris Kipers",
   "license": "MIT",
   "dependencies": {
-    "flux": "^2.0.1",
-    "lodash": "^2.4.1",
-    "object-assign": "^2.0.0",
-    "react": "^0.12.2",
-    "socket.io-client": "^1.2.1",
-    "moment": "^2.9.0",
-    "sillyname": "0.0.3",
-    "express": "^4.11.0",
-    "socket.io": "^1.2.1",
-    "jade": "~1.9.1",
-    "guid": "0.0.12",
-    "express-session": "^1.10.1",
+    "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.3",
-    "q": "^1.1.2"
+    "express": "^4.11.0",
+    "express-session": "^1.10.1",
+    "flux": "^2.0.1",
+    "guid": "0.0.12",
+    "jade": "~1.9.1",
+    "lodash": "^2.4.1",
+    "moment": "^2.9.0",
+    "mongoose": "^3.8.22",
+    "mongoose-q": "0.0.13",
+    "object-assign": "^2.0.0",
+    "q": "^1.1.2",
+    "react": "^0.12.2",
+    "sillyname": "0.0.3",
+    "socket.io": "^1.2.1",
+    "socket.io-client": "^1.2.1"
   },
   "devDependencies": {
     "browserify": "^8.1.0",
